...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_max="400dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:inputType="numberPassword"
            android:maxLength="4" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til1"
        app:layout_constraintWidth_max="400dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>
...
